# graphLM

./: .gitignore  LICENSE  README.md
backend/: .env.template  chatbots_metadata.json  main.py  pyproject.toml
backend/storage/a9ce9297-a6a0-4aa1-b83e-6216c230c62d/: docstore.json  index_store.json
frontend/: package-lock.json  package.json
frontend/components/: ChatInterface.tsx  ChatbotCreationForm.tsx  ChatbotList.tsx  GraphView.tsx  KnowledgeSourceUpload.tsx
frontend/pages/: index.tsx
frontend/utils/: api.ts
